# AppmemDumper

./: .gitignore  .travis.yml  PKG-INFO  README.md  _config.yml  app-mem-dumper  appmemdumper.html  appmemdumper.py  front.yml  index.md  reinstall.sh  requirements.txt  setup.cfg  setup.py
appmemdumper/: __info__.py  __init__.py  memdump.py  utils.py
appmemdumper/dumpers/: __init__.py  application.py  general.py  system.py  template.py
