[metadata]
name = appmemdumper
version = file: appmemdumper/VERSION.txt
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/AppmemDumper
description = Tool for collecting various forensics artifacts in Windows memory dumps using Volatility and Foremost for common Windows applications
long-description = file: README.md
long-description-content-type = text/markdown
keywords =
    tinyscript
    forensics
    volatility
    foremost
    triage
    artifacts
    windows
    applications
license = AGPLv3
license-file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Security

[options]
packages =
    appmemdumper
    appmemdumper.dumpers
scripts = app-mem-dumper
include-package-data = false
install-requires =
    patool
    pyunpack
    tinyscript
setup-requires = setuptools
python-requires =
    >=2.7
    <3

[options.package_data]
* = *.txt
